tests/baselines/reference/asyncGenerators.objectLiteralMethod.17.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.17.es5.ts(3,16): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.17.es5.ts (1 errors) ====
    const x = {
        async * f() {
            var x: await;
                   ~~~~~
!!! error TS2304: Cannot find name 'await'.
        }
    }